--- a/src/github-markdown.css
+++ b/src/github-markdown.css
@@ -31,7 +31,7 @@
     --color-prettylights-syntax-brackethighlighter-angle: #8b949e;
     --color-prettylights-syntax-sublimelinter-gutter-mark: #484f58;
     --color-prettylights-syntax-constant-other-reference-link: #a5d6ff;
-    --color-fg-default: #c9d1d9;
+    --color-fg-default: #202124;
     --color-fg-muted: #8b949e;
     --color-fg-subtle: #484f58;
     --color-canvas-default: #0d1117;
