Add highlight style

--- a/src/content-script/styles.css
+++ b/src/content-script/styles.css
@@ -75,6 +75,7 @@
   word-break: break-all;
 }
 
-.chat-gpt-container #answer .hljs {
-  padding: 0 !important;
+.chat-gpt-container pre code.hljs {
+  padding: 0;
+  background-color: transparent;
 }
