--- a/src/content-script/styles.scss
+++ b/src/content-script/styles.scss
@@ -6,6 +6,7 @@
   flex-basis: 0;
   flex-grow: 1;
   z-index: 1;
+  transition: transform 0.2s ease-in-out;
 
   .chat-gpt-card {
     border: 1px solid;
